--- a/index.html
+++ b/index.html
@@ -1,5 +1,21 @@
 My Page
+<body>
 <h1>William Revell</h1>
-<h2>Portfolio</h2>
-<h2>Experience</h2>
-<h2>Education</h2>
+  <div>
+    <h2>About</h2>
+      <p>"I have recently completed my Bachelors of Computer Science at the University of Saskatchewan, and am interested in pursuing job 
+      opportunities in the field of software engineering. I enjoy utilizing critical thinking to solve complex problems and learning throughout
+      the process. I have experience working in team environments and work well communicating ideas and implementing them."</p>
+  </div>
+  <div>
+    <h2>Portfolio</h2>
+  </div>
+  <div>
+    <h2>Experience</h2>
+      <h3>Languages</h3>
+      <h3>Fields</h3>
+  </div>
+  <div>
+    <h2>Education</h2>
+  </div>
+</body>
