--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ body{
 <h1>William Revell</h1>
   <div>
     <h2 id="About" onclick="revealText()">About</h2>
-      <p>"I have recently completed my Bachelors of Computer Science at the University of Saskatchewan, and am interested in pursuing job 
+      <p id="Stuff">"I have recently completed my Bachelors of Computer Science at the University of Saskatchewan, and am interested in pursuing job 
       opportunities in the field of software engineering. I enjoy utilizing critical thinking to solve complex problems and learning throughout
       the process. I have experience working in team environments and work well communicating ideas and implementing them."</p>
   </div>
@@ -25,7 +25,8 @@ body{
   </div>
 </body>
 <script>
+document.getElementById("About").onclick = function() {revealText()};
 function revealText(){
-    document.getElementById("About").style.color = "red";
+    document.getElementById("Stuff").classList.toggle("show");
 }
 </script>
