--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ body{
   <div>
     <a href="#!portfolio">Portfolio</a>
     <a href="#!experience">Experience</a>
-    <a href="#!education">Education</h2>
+    <a href="#!education">Education</a>
   </div>
  
 <script>
