--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@ body{
     <a href="#!portfolio">Portfolio</a>
     <a href="#!experience">Experience</a>
     <a href="#!education">Education</a>
+    
+    <div ng-view></div>
   </div>
  
 <script>
