--- a/index.html
+++ b/index.html
@@ -10,13 +10,9 @@ body{
   
 <body ng-app="myApp">
 <h1>William Revell</h1>
+  
   <div>
-    <h2>About</h2>
-      <p id="Stuff">"I have recently completed my Bachelors of Computer Science at the University of Saskatchewan, and am interested in pursuing job 
-      opportunities in the field of software engineering. I enjoy utilizing critical thinking to solve complex problems and learning throughout
-      the process. I have experience working in team environments and work well communicating ideas and implementing them."</p>
-  </div>
-  <div>
+    <a href="#!main">About</a>
     <a href="#!portfolio">Portfolio</a>
     <a href="#!experience">Experience</a>
     <a href="#!education">Education</a>
