--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-route.js"></script>
 <style>
 body{
-  background-color: green;
+  background-color: blue;
 }
 </style>
   
