--- a/about.htm
+++ b/about.htm
@@ -1,8 +1,7 @@
 <html>
 <body>
-<h1>William Revell</h1>
-  <div>
-    <h2>About</h2>
+<h2>About</h2>
+  <div style="background-color:Khaki" >
       <p id="Stuff">"I have recently completed my Bachelors of Computer Science at the University of Saskatchewan, and am interested in pursuing job 
       opportunities in the field of software engineering. I enjoy utilizing critical thinking to solve complex problems and learning throughout
       the process. I have experience working in team environments and work well communicating ideas and implementing them."</p>
