--- a/education.htm
+++ b/education.htm
@@ -1,7 +1,8 @@
 <html>
 <body>
-<h2>Experience</h2>
-      <h3>Languages</h3>
-      <h3>Fields</h3>
+<h2>Education</h2>
+      <div style="background-color:Khaki">
+	  
+	  </div>
 </html>
 </body>
