redid the formatting on all pages and changed background color

--- a/about.htm
+++ b/about.htm
@@ -1,10 +1,35 @@
 <html>
 <body>
-<h2>About</h2>
-  <div style="background-color:Khaki" >
-      <p id="Stuff">"I have recently completed my Bachelors of Computer Science at the University of Saskatchewan, and am interested in pursuing job 
-      opportunities in the field of software engineering. I enjoy utilizing critical thinking to solve complex problems and learning throughout
-      the process. I have experience working in team environments and work well communicating ideas and implementing them."</p>
+<style>
+h2 {
+		font-family: "Times New Roman", Times, serif, bold;
+	}
+	p {
+    font-family: "Times New Roman", Times, serif;
+	margin-left:3em;
+	margin-right:3em;
+	text-align:center;
+}
+div {
+	margin-left:3em;
+	margin-right:3em;
+	
+}
+p{
+	margin-left:10em;
+	margin-right:10em;
+	margin-bottom:4em;
+	margin-top:4em;
+}
+</style>
+<h2 style="color:white;margin-bottom:1em;border-bottom: 6px solid; border-color:white;">About</h2>
+  <div style="background-color:PowderBlue" >
+      <p id="Stuff"><br><br>I have recently completed my Bachelors of Computer Science at the University of Saskatchewan,
+	  and am interested in pursuing job opportunities in the field of software engineering and development. 
+	  I have a passion for learning new technologies and skills and hope to further develop my current abilities through future 
+	  job opportunities. I enjoy coding and creation and work on different projects in my spare time.  
+	  I enjoy utilizing critical thinking skills to solve complex problems and learning throughoutthe process. 
+	  I have experience working in team environments and work well both communicating ideas and implementing them.<br><br><br></p>
   </div>
 </body>
 </html>
