--- a/experience.htm
+++ b/experience.htm
@@ -1,9 +1,38 @@
 <html>
 <body>
-<h2>Experience<h2>
-	<div style="background-color:Khaki">
+<style>
+h2 {
+		font-family: "Times New Roman", Times, serif, bold;
+		margin-left:0.5em;
+		margin-right:0.5em;
+	}
+div {
+	margin-left:1.5em;
+	margin-right:1.5em;
+	
+}
+</style>
+<h2 style="color:white;border-bottom: 6px solid; margin-bottom:1em;border-color:white;">Experience<h2>
+	<div style="background-color:PowderBlue;text-align:center;">
 		<h3>Languages</h3>
-		<h3>Fields</h3>
+			<p style="font-size:50%;">Java</p>
+			<p style="font-size:50%;">C#</p>
+			<p style="font-size:50%;">Golang</p>
+			<p style="font-size:50%;">C++</p>
+			<p style="font-size:50%;">C</p>
+			<p style="font-size:50%;">Scala</p>
+			<p style="font-size:50%;">Python</p>
+			<p style="font-size:50%;">Objective C</p>
+			<p style="font-size:50%;">SQL</p>
+	</div>
+	<div style="background-color:PowderBlue;text-align:center;">
+		<h3>Techniques</h3>
+			<p style="font-size:50%;">Version Control</p>
+			<p style="font-size:50%;">Waterfall and Agile Methodologies</p>
+			<p style="font-size:50%;">Pair Programming</p>
+			<p style="font-size:50%;">Manual and Automated Testing</p>
+			<p style="font-size:50%;">Algorithm Design</p>
+			<p style="font-size:50%;">Procedural Generation</p>
 	</div>
 </body>
 </html>
