--- a/portfolio.htm
+++ b/portfolio.htm
@@ -1,4 +1,51 @@
-<h2>Portfolio<h2>
-	<div style="background-color:Khaki">
+<h2 style="color:white;margin-bottom:1em;border-bottom: 6px solid; border-color:white;">Portfolio<h2>
+<style>
+img{
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+}
+p {
+    font-family: "Times New Roman", Times, serif;
+	margin-left:3em;
+	margin-right:3em;
 	
+}
+h3 {
+    font-family: "Times New Roman", Times, serif, bold;
+}
+h2 {
+		font-family: "Times New Roman", Times, serif, bold;
+	}
+div {
+	margin-left:3em;
+	margin-right:3em;
+}
+</style>
+	<div style="background-color:PowderBlue; max-width:800px; margin:auto; border: 3px solid green;">
+		<h3 style="margin:auto">Dwarves at Hielthe Mine</h3>
+			<img src="Screenshots/main%20screen%20(1).png" style="width:300px;height:300px;">
+			<p style="font-size:50%;text-align:center;">Created in Unity using C# and utilizing github for version control. 
+			Procedurally generates a terrain map and various different resource types. 
+			The player gathers resources, finds npcs and completes quests for them 
+			and builds a settlement all while surviving waves of enemies.</p>
+			<a href="https://github.com/LucrativeHippo/Dwarves" style="font-size:50%;">Github Repository</a>
+	</div>
+	<div style="background-color:Aquamarine; max-width:800px; margin:auto; border: 3px solid green;">
+		<h3 style="margin:auto">Space Time Guy</h3>
+			<img src="Screenshots/image_2017-12-10_01-07-33.png" style="width:300px;height:300px;">
+			<p style="font-size:50%;text-align:center;">Implemented in Unity using C# and utilizing github for version control. 
+			Utilizes PCG to generate a level with a randomized theme and pattern of rooms and hallways. 
+			Various pickups and weapons spawn in each room as the player fights their way to the end room portal. 
+			Once reached the player is teleported to a different level with an incremented difficulty.</p>
+			<a href="https://github.com/dmp450/cmpt306" style="font-size:50%;">Github Repository</a>
+	</div>
+	<div style="background-color:Olive; max-width:800px;margin:auto; border: 3px solid green;">
+		<h3 style="margin:auto">BattleBots</h3>
+			<img src="Screenshots/370battlebots.jpg" style="width:300px;height:300px;">
+			<p style="font-size:50%; text-align:center;">Created in NetBeans IDE using Java and Forth and utilizing gitlab for version control.
+			Can be played as either single or multiplayer, is a team oriented turn based strategy game. 
+			Where each player controls three different tanks the scout, sniper and tank and attempts to survive the longest 
+			Utilizes a java converter for Forth based AI.</p>
+			<a href="https://github.com/LucrativeHippo/BattleBots" style="font-size:50%;">Github Repository</a>
 	</div>
