--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@ app.config(function($routeProvider){
   .when("/experience", {
      templateUrl : "experience.htm"
   })
+  .when("/experience", {
+     templateUrl : "aframetest.html"
+  })
 });
 </script>
 </header>
