--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 	<a href="#!" style="margin-left:3em">About</a>
 	<a href="#!portfolio" style="margin-left:1em">Portfolio</a>
 	<a href="#!experience" style="margin-left:1em">Experience</a>
+	<a href="#!aframe" style="margin-left:1em">Aframe</a>
 	
 	
 
@@ -45,7 +46,7 @@ app.config(function($routeProvider){
   .when("/experience", {
      templateUrl : "experience.htm"
   })
-  .when("/experience", {
+  .when("/aframe", {
      templateUrl : "aframetest.html"
   })
 });
