aframe testing for age-well

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
  
 <body ng-app="myApp">
     <header>
+	<a href="workspace.html">aframe</a>
 	<h1 style="color:white;margin-top:2em;margin-left:1em;margin-right:1em;border-top: 6px solid; border-color:white;">William Revell</h1>
   
 	<a href="#!" style="margin-left:3em">About</a>
