--- a/experience.htm
+++ b/experience.htm
@@ -15,15 +15,15 @@ div {
 <h2 style="color:white;border-bottom: 6px solid; margin-bottom:1em;border-color:white;">Experience<h2>
 	<div style="background-color:PowderBlue;text-align:center;">
 		<h3>Languages</h3>
-			<p style="font-size:50%;">Java</p>
-			<p style="font-size:50%;">C#</p>
-			<p style="font-size:50%;">Golang</p>
-			<p style="font-size:50%;">C++</p>
-			<p style="font-size:50%;">C</p>
-			<p style="font-size:50%;">Scala</p>
-			<p style="font-size:50%;">Python</p>
-			<p style="font-size:50%;">Objective C</p>
-			<p style="font-size:50%;">SQL</p>
+			<p style="font-size:50%;">Java
+			C#
+			Golang
+			C++
+			C
+			Scala
+			Python
+			Objective C
+			SQL</p>
 	</div>
 	<div style="background-color:PowderBlue;text-align:center;">
 		<h3>Techniques</h3>
