--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ app.config(function($routeProvider){
      templateUrl : "experience.htm"
   })
   .when("/aframe", {
-     templateUrl : "aframetest.html"
+     templateUrl : "workspace.html"
   })
 
 });
