made small change to wall

--- a/workspace.html
+++ b/workspace.html
@@ -35,7 +35,7 @@
 	      <img id="skyTexture" src="forest.jpg">
 		  <img id="floorTexture" src="floor.jpg">
 		  <img id="bboardTexture" src="base.jpg">
-		  <img id="wallTexture" src="wall.jpg">
+		  <img id="wallTexture" src="Wall.jpg">
 		  <!--<a-asset-item id="brain-obj" src="brain.obj"></a-asset-item>
 		  <a-asset-item id="brain-mtl" src="brain.mtl"></a-asset-item>-->
 		</a-assets>
