--- a/workspace.html
+++ b/workspace.html
@@ -40,15 +40,10 @@
 		  <a-asset-item id="brain-mtl" src="brain.mtl"></a-asset-item>-->
 		</a-assets>
 		
-	<!--camera-->
-	<!--<a-camera>
+	
+	<a-camera>
 		<a-cursor></a-cursor>
-	</a-camera>-->
-	<a-entity id="rig" universal-controls kinematic-body>
-        <a-entity id="camera"
-                  camera
-                  position="0 1.6 0"
-    </a-entity>
+	</a-camera>
 		
 	<!--instructions-->
 	<a-text id="instructions1" value="Click and drag \n the mouse in \n the direction \n you want to \n turn the screen" color="#FFFFFF"
