made the mp4 extensions case sensitive

--- a/answer1.html
+++ b/answer1.html
@@ -85,7 +85,7 @@
 		
 		
 		<!-- Single source video. -->
-        <video id="video1" src="360_0044.mp4" preload="auto" autoplay style="display:none" loop="false" crossOrigin="anonymous"  playsinline webkit-playsinline> 
+        <video id="video1" src="360_0044.MP4" preload="auto" autoplay style="display:none" loop="false" crossOrigin="anonymous"  playsinline webkit-playsinline> 
         </video>
   
 		<img id="play-image" src="play-button.png">
