checking when player is 2d with unstitched video

--- a/age_well_intro.html
+++ b/age_well_intro.html
@@ -78,8 +78,9 @@
     <a-scene>
 		
 		 <!-- The original example also has this 180 degree rotation, to appear to be going forward. -->
-        <a-videosphere id="player" rotation="0 180 0" src="#video1" >
-        </a-videosphere>
+        <!--<a-videosphere id="player" rotation="0 180 0" src="#video1" >
+        </a-videosphere>-->
+		<a-video src="#video1" width="16" height="9" position="0 0 -20"></a-video>
 	  
 		<!--<a-image src="#play-image" position="-1 -2 -5" play-on-button-click></a-image>
 		<a-image src="#stop-image" position="1 -2 -5" pause-on-button-click></a-image>
