--- a/age_well_intro.html
+++ b/age_well_intro.html
@@ -103,7 +103,7 @@
 		
 		
 		<!-- Single source video. -->
-        <video id="video1" src="360_0044.MP4" preload="auto" autoplay style="display:none" loop="false" crossOrigin="anonymous"  playsinline webkit-playsinline> 
+        <video id="video1" src="3secondsV2.MP4" preload="auto" autoplay style="display:none" loop="false" crossOrigin="anonymous"  playsinline webkit-playsinline> 
         </video>
   
 		<img id="play-image" src="play-button.png">
