--- a/age_well_video_question1.html
+++ b/age_well_video_question1.html
@@ -75,19 +75,22 @@
 		<a-image src="#stop-image" position="1 -2 -5" pause-on-button-click></a-image>
 		-->
 		<a-text id="question_text" value="This is a question? \n A- this is an answer. \n B- this is an answer. \n C- this is an answer." color="#FFFFFF"
-        position="-6 3 -5" scale="1.5 1.5 1.5" alignment="center" visible="false"></a-text>
+        position="-3 3 -5" scale="1.5 1.5 1.5" alignment="center" visible="false">
+			<a-box src="black-and-white-dark-marble.jpg" position="0.75 0 -0.01" scale="2.5 1.5 0.01" transparent="true"></a-box>
+			<!--Correct answer-->
+			<a-image id="answer1" src="button.png" position="1.5 -2 0" custom_link="answer1.html" visible="false">
+				<a-text value="B" color="black" position="-0.1 0 0.1" scale="1 1 1" alignment="center"></a-text>
+			</a-image>
+			<!--Incorrect answer-->
+			<a-image id="answer2" src="button.png" position="0 -2 0" custom_link="age_well_video_question1.html" visible="false">
+				<a-text value="A" color="black" position="-0.1 0 0.1" scale="1 1 1" alignment="center"></a-text>
+			</a-image>
+		</a-text>
 		
 		<!--<a-image id="answer1" src="button.png" position="-2 0 -5" custom_link="vid_gallery2.html" visible="false">
 			<a-text value="C" color="#FFFFFF" position="0 0 0" scale="1 1 1" alignment="center"></a-text>
 		</a-image>-->
-		<!--Correct answer-->
-		<a-plane id="answer1" color="orange" position="-3 0 -5" custom_link="answer1.html" visible="false">
-			<a-text value="B" color="black" position="0 0 0" scale="1 1 1" alignment="center"></a-text>
-		</a-plane>
-		<!--Incorrect answer-->
-		<a-plane id="answer2" color="orange" position="-6 0 -5" custom_link="age_well_video_question1.html" visible="false">
-			<a-text value="A" color="black" position="0 0 0" scale="1 1 1" alignment="center"></a-text>
-		</a-plane>
+		
 		
 		<a-light type="ambient" color="#445451"></a-light>
 		<a-light type="point" intensity="2" position="2 4 4"></a-light>
@@ -101,7 +104,7 @@
 		
 		
 		<!-- Single source video. -->
-        <video id="video1" src="360_0044.MP4" preload="auto" autoplay style="display:none" loop="false" crossOrigin="anonymous"  playsinline webkit-playsinline> 
+        <video id="video1" src="3secondsV2.MP4" preload="auto" autoplay style="display:none" loop="false" crossOrigin="anonymous"  playsinline webkit-playsinline> 
         </video>
   
 		<img id="play-image" src="play-button.png">
