--- a/answer1.html
+++ b/answer1.html
@@ -85,7 +85,7 @@
 		
 		
 		<!-- Single source video. -->
-        <video id="video1" src="360_0044.MP4" preload="auto" autoplay style="display:none" loop="false" crossOrigin="anonymous"  playsinline webkit-playsinline> 
+        <video id="video1" src="3secondsV2.MP4" preload="auto" autoplay style="display:none" loop="false" crossOrigin="anonymous"  playsinline webkit-playsinline> 
         </video>
   
 		<img id="play-image" src="play-button.png">
@@ -96,7 +96,7 @@
 		<script>
 			document.getElementById('video1').addEventListener('ended',videoEnded,false);
 		function videoEnded(e) {
-			window.location.href = age_well_end.html;	
+			window.location.href = "age_well_end.html";	
 		}
 		</script>
 	</a-scene>
