--- a/age_well_video_question1.html
+++ b/age_well_video_question1.html
@@ -104,7 +104,7 @@
 		
 		
 		<!-- Single source video. -->
-        <video id="video1" src="3secondsV2.MP4" preload="auto" autoplay style="display:none" loop="false" crossOrigin="anonymous"  playsinline webkit-playsinline> 
+        <video id="video1" src="3secondsV2.mp4" preload="auto" autoplay style="display:none" loop="false" crossOrigin="anonymous"  playsinline webkit-playsinline> 
         </video>
   
 		<img id="play-image" src="play-button.png">
