--- a/age_well_video_question1.html
+++ b/age_well_video_question1.html
@@ -5,62 +5,9 @@
     <script src="https://aframe.io/releases/0.7.1/aframe.min.js"></script>
     <script src="https://unpkg.com/super-hands@2.1.0/dist/super-hands.min.js"></script>
 	<script src="https://cdn.rawgit.com/donmccurdy/aframe-physics-system/v3.1.2/dist/aframe-physics-system.min.js"></script> 
+	<script src="age-well-components.js"></script>
   
   <script>
-		AFRAME.registerComponent('play-on-button-click', {
-			init: function () {
-			
-			this.onClick = this.onClick.bind(this);
-			},
-			play: function () {
-			this.el.addEventListener('click', this.onClick);
-			},
-			pause: function () {
-			this.el.removeEventListener('click', this.onClick);
-			},
-			onClick: function (evt) {
-			
-			//var video = document.querySelector("#player");
-			var video = document.querySelector("#video1");
-			if (!video) { return; }
-				//video.components.material.material.map.image.play();
-				video.play();
-				video.playbackRate=1;
-			}
-		});
-		
-		AFRAME.registerComponent('pause-on-button-click', {
-			init: function () {
-			
-			this.onClick = this.onClick.bind(this);
-			},
-			play: function () {
-			this.el.addEventListener('click', this.onClick);
-			},
-			pause: function () {
-			this.el.removeEventListener('click', this.onClick);
-			},
-			onClick: function (evt) {
-			//var video = document.querySelector("#player");
-			var video = document.querySelector("#video1");
-			if (!video) { return; }
-				//video.components.material.material.map.image.pause();
-				video.pause();
-			}
-		});
-		
-		AFRAME.registerComponent('custom_link', {
-				schema: {default: ''},
-
-				init: function () {
-					var url = this.data;
-					this.el.addEventListener('click', function () {
-					window.location.href = url;
-					});
-				}
-
-			}); 
-		
 			
 		</script> 
     <a-scene>
@@ -75,15 +22,19 @@
 		<a-image src="#stop-image" position="1 -2 -5" pause-on-button-click></a-image>
 		-->
 		<a-text id="question_text" value="This is a question? \n A- this is an answer. \n B- this is an answer. \n C- this is an answer." color="#FFFFFF"
-        position="-3 3 -5" scale="1.5 1.5 1.5" alignment="center" visible="false">
-			<a-box src="black-and-white-dark-marble.jpg" position="0.75 0 -0.01" scale="2.5 1.5 0.01" transparent="true"></a-box>
+        position="-3 3 -5" scale="1.5 1.5 1.5" alignment="center" visible="false" font="mozillavr">
+			<a-box src="futureui1.png" position="1 0 -0.01" scale="2.5 1.5 0.01" transparent="true"></a-box>
 			<!--Correct answer-->
 			<a-image id="answer1" src="button.png" position="1.5 -2 0" custom_link="answer1.html" visible="false">
 				<a-text value="B" color="black" position="-0.1 0 0.1" scale="1 1 1" alignment="center"></a-text>
+				<a-animation attribute="scale" begin="mouseenter" dur="300" to="1.5 1.5 1.5"></a-animation>
+				<a-animation attribute="scale" begin="mouseleave" dur="300" to="1 1 1"></a-animation>
 			</a-image>
 			<!--Incorrect answer-->
 			<a-image id="answer2" src="button.png" position="0 -2 0" custom_link="age_well_video_question1.html" visible="false">
 				<a-text value="A" color="black" position="-0.1 0 0.1" scale="1 1 1" alignment="center"></a-text>
+				<a-animation attribute="scale" begin="mouseenter" dur="300" to="1.5 1.5 1.5"></a-animation>
+				<a-animation attribute="scale" begin="mouseleave" dur="300" to="1 1 1"></a-animation>
 			</a-image>
 		</a-text>
 		
