--- a/workspace.html
+++ b/workspace.html
@@ -47,17 +47,17 @@
 		
 	<!--instructions-->
 	<a-text id="instructions1" value="Click and drag \n the mouse in \n the direction \n you want to \n turn the screen" color="#FFFFFF"
-        position="-4.75 1.5 -4.9" scale="1 1 1" alignment="center">
-			<a-box src="black-and-white-dark-marble.jpg" position="0.75 0 -0.01" scale="1.5 1.5 0.01" transparent="true"></a-box>
-			<a-image src="mouse_grab.png" position="0.75 1 0" scale="0.3 0.3 0.3">
+        position="-4.6 1.5 -4.9" scale="0.9 0.9 1" alignment="center" font="mozillavr">
+			<a-box src="futureui1.png" position="0.7 0 -0.01" scale="1.8 1.8 0.01" transparent="true"></a-box>
+			<a-image src="mouse_grab.png" position="0.75 1.25 0" scale="0.3 0.3 0.3">
 				<a-animation attribute="position" to="0.5 1.5 0" direction="alternate" dur="2000" repeat="indefinite"></a-animation>
 			</a-image>
 		</a-text>
 		
 	<a-text id="instructions2" value="Position the \n cursor over \n an object and \n click to interact \n with it" color="#FFFFFF"
-        position="-0.75 1.5 -4.9" scale="1 1 1" alignment="center">
-			<a-box src="black-and-white-dark-marble.jpg" position="0.75 0 -0.01" scale="1.5 1.5 0.01" transparent="true"></a-box>
-			<a-text id="start-button-text" value="START" position="0.75 1 0" color="white" scale="0.5 0.5 0.5">
+        position="-0.6 1.5 -4.9" scale="0.9 0.9 1" alignment="center" font="mozillavr">
+			<a-box src="futureui1.png" position="0.7 0 -0.01" scale="1.8 1.8 0.01" transparent="true"></a-box>
+			<a-text id="start-button-text" value="START" position="0.75 1.25 0" color="white" scale="0.5 0.5 0.5">
 				<a-sphere id="start-button"src="blue_yellow_glass.jpg" position="0.35 0 -0.1" rotation="0 0 0" radius="0.25" scale="1 1 0.1" static-body>			
 				</a-sphere>
 				<a-ring color="black" radius-inner="1.3" radius-outer="2" scale="0.03 0.06 0.06" position="0.5 0 0.1">
@@ -67,9 +67,9 @@
 		</a-text>
 	
 	<a-text id="instructions3" value="Use the WASD \n or arrow keys \n to navigate \n around the \n page" color="#FFFFFF"
-        position="3.25 1.5 -4.9" scale="1 1 1" alignment="center">
-			<a-box src="black-and-white-dark-marble.jpg" position="0.75 0 -0.01" scale="1.5 1.5 0.01" transparent="true"></a-box>
-			<a-image src="arrowkeys.png" position="0.75 1.5 0" ></a-image>
+        position="3.4 1.5 -4.9" scale="0.9 0.9 1" alignment="center" font="mozillavr">
+			<a-box src="futureui1.png" position="0.7 0 -0.01" scale="1.8 1.8 0.01" transparent="true"></a-box>
+			<a-image src="arrowkeys.png" position="0.75 1.75 0" ></a-image>
 		</a-text>
 		
 	<!-- start button-->
