--- a/workspace.html
+++ b/workspace.html
@@ -41,14 +41,18 @@
 		</a-assets>
 		
 	
-	<a-camera>
-		<a-cursor></a-cursor>
+	<a-camera bounding_box="xpos: 5; ypos: 5">
+		<a-entity position="0 0 -3"
+                geometry="primitive: ring; radiusInner: 0.04; radiusOuter: 0.06;"
+                material="color: cyan; shader: flat"
+                cursor="maxDistance: 30; fuse: true">
+      </a-entity>
 	</a-camera>
 		
 	<!--instructions-->
 	<a-text id="instructions1" value="Click and drag \n the mouse in \n the direction \n you want to \n turn the screen" color="#FFFFFF"
         position="-4.6 1.5 -4.9" scale="0.9 0.9 1" alignment="center" font="mozillavr">
-			<a-box src="futureui1.png" position="0.7 0 -0.01" scale="1.8 1.8 0.01" transparent="true"></a-box>
+			<a-box color="black" material="opacity: 0.8" position="0.7 0 -0.01" scale="1.8 1.8 0.01" transparent="true"></a-box>
 			<a-image src="mouse_grab.png" position="0.75 1.25 0" scale="0.3 0.3 0.3">
 				<a-animation attribute="position" to="0.5 1.5 0" direction="alternate" dur="2000" repeat="indefinite"></a-animation>
 			</a-image>
@@ -56,11 +60,11 @@
 		
 	<a-text id="instructions2" value="Position the \n cursor over \n an object and \n click to interact \n with it" color="#FFFFFF"
         position="-0.6 1.5 -4.9" scale="0.9 0.9 1" alignment="center" font="mozillavr">
-			<a-box src="futureui1.png" position="0.7 0 -0.01" scale="1.8 1.8 0.01" transparent="true"></a-box>
+			<a-box color="black" material="opacity: 0.8" position="0.7 0 -0.01" scale="1.8 1.8 0.01" transparent="true"></a-box>
 			<a-text id="start-button-text" value="START" position="0.75 1.25 0" color="white" scale="0.5 0.5 0.5">
 				<a-sphere id="start-button"src="blue_yellow_glass.jpg" position="0.35 0 -0.1" rotation="0 0 0" radius="0.25" scale="1 1 0.1" static-body>			
 				</a-sphere>
-				<a-ring color="black" radius-inner="1.3" radius-outer="2" scale="0.03 0.06 0.06" position="0.5 0 0.1">
+				<a-ring color="cyan" radius-inner="1.3" radius-outer="2" scale="0.06 0.06 0.06" position="0.5 0 0.1">
 					<a-animation attribute="position" to="1 1.5 0.1" direction="alternate" dur="2000" repeat="indefinite"></a-animation>
 				</a-ring>
 			</a-text>
@@ -68,7 +72,7 @@
 	
 	<a-text id="instructions3" value="Use the WASD \n or arrow keys \n to navigate \n around the \n page" color="#FFFFFF"
         position="3.4 1.5 -4.9" scale="0.9 0.9 1" alignment="center" font="mozillavr">
-			<a-box src="futureui1.png" position="0.7 0 -0.01" scale="1.8 1.8 0.01" transparent="true"></a-box>
+			<a-box color="black" material="opacity: 0.8" position="0.7 0 -0.01" scale="1.8 1.8 0.01" transparent="true"></a-box>
 			<a-image src="arrowkeys.png" position="0.75 1.75 0" ></a-image>
 		</a-text>
 		
@@ -84,12 +88,13 @@
 	</a-text>
 	
 	<!-- logos -->
-	<a-image src="age-well-competition.jpg" position="-4.9 1.5 -4" rotation="0 90 0">
 	
+	<a-image src="age-well-competition.jpg" position="-4.9 3 -4" rotation="0 90 0">
+		<a-box color="black" material="opacity: 0.8" position="-0 0 -0.01" scale="1.1 1.1 0.01" transparent="true"></a-box>
 	</a-image>
 	
-	<a-image src="Competition-Logo1.png" position="4.9 1.5 -4" rotation="0 -90 0">
-	
+	<a-image src="Competition-Logo1.png" position="4.9 3 -4" rotation="0 -90 0">
+		<a-box color="black" material="opacity: 0.8" position="0 0 -0.01" scale="1.1 1.1 0.01" transparent="true"></a-box>
 	</a-image>
 
 	<!--baseboards-->  
