--- a/workspace.html
+++ b/workspace.html
@@ -56,34 +56,40 @@
 	<a-entity id="room" position="0 0 0">
 		<!--instructions-->
 		<a-text id="instructions1" value="Click and drag \n the mouse in \n the direction \n you want to \n turn the screen" color="#FFFFFF"
-			position="-4.6 1.6 -4.9" scale="0.9 0.9 1" alignment="center" font="mozillavr">
-				<a-box color="black" material="opacity: 0.8" position="0.76 -0.10 -0.01" scale="1.57 1.1 0.01" transparent="true"></a-box>
-				<a-image src="Keyboard_Black_Mouse_Left.png" position="1 1 0" scale="0.5 0.5 0.5">
+			position="-4 1.6 -4.9" scale="0.9 0.9 1" text="align: center" font="mozillavr">
+				<a-box color="black" material="opacity: 0.8" position="0 -0.10 -0.01" scale="1.57 1.1 0.01" transparent="true">
+					<a-box scale="1.1 1.1 0.01" material="opacity: 0.8" color="grey"></a-box>
+				</a-box>
+				<a-image src="Keyboard_Black_Mouse_Left.png" position="0 1 0" scale="0.5 0.5 0.5">
 					<a-animation attribute="position" to="0.5 1.5 0" direction="alternate" dur="2000" repeat="indefinite"></a-animation>
 					<a-animation attribute="visible" from="true" to="false" direction="alternate" delay="2000" dur="1" repeat="indefinite"></a-animation>
 				</a-image>
-				<a-image src="Keyboard_Black_Mouse_Simple.png" position="1 1 0" scale="0.5 0.5 0.5" visible="false">
+				<a-image src="Keyboard_Black_Mouse_Simple.png" position="0 1 0" scale="0.5 0.5 0.5" visible="false">
 					<a-animation attribute="position" to="0.5 1.5 0" direction="alternate" dur="2000" repeat="indefinite"></a-animation>
 					<a-animation attribute="visible" from="false" to="true" direction="alternate" delay="2000" dur="1" repeat="indefinite"></a-animation>
 				</a-image>
 		</a-text>
 		
 		<a-text id="instructions2" value="Position the \n cursor over \n an object and \n click to interact \n with it" color="#FFFFFF"
-			position="-0.72 1.6 -4.9" scale="0.9 0.9 1" alignment="center" font="mozillavr">
-				<a-box color="black" material="opacity: 0.8" position="0.79 -0.12 -0.01" scale="1.616 1.14 0.01" transparent="true"></a-box>
-				<a-text id="start-button-text" value="START" position="0.75 1 0" color="white" scale="0.5 0.5 0.5">
+			position="0 1.6 -4.9" scale="0.9 0.9 1" text="align: center" font="mozillavr">
+				<a-box color="black" material="opacity: 0.8" position="0 -0.12 -0.01" scale="1.616 1.14 0.01" transparent="true">
+					<a-box scale="1.1 1.1 0.01" material="opacity: 0.8" color="grey"></a-box>
+				</a-box>
+				<a-text id="start-button-text" value="START" position="0 1 0" color="white" scale="0.5 0.5 0.5">
 					<a-sphere id="start-button"src="blue_yellow_glass.jpg" position="0.35 0 -0.1" rotation="0 0 0" radius="0.25" scale="1 1 0.1" static-body>			
 					</a-sphere>
 					<a-ring color="cyan" radius-inner="1.3" radius-outer="2" scale="0.06 0.06 0.06" position="0.5 0 0.1">
-						<a-animation attribute="position" to="1 1.5 0.1" direction="alternate" dur="2000" repeat="indefinite"></a-animation>
+						<a-animation attribute="position" to="-1 1.5 0.1" direction="alternate" dur="3200" repeat="indefinite"></a-animation>
 					</a-ring>
 				</a-text>
 			</a-text>
 	
 		<a-text id="instructions3" value="Use the WASD \n or arrow keys \n to navigate \n around the \n page" color="#FFFFFF"
-			position="3.3 1.5 -4.9" scale="0.9 0.9 1" alignment="center" font="mozillavr">
-				<a-box color="black" material="opacity: 0.8" position="0.74 -0.13 -0.01" scale="1.6 1.14 0.01" transparent="true"></a-box>
-				<a-entity id="arrow_keys" position="0.65 1.25 0" scale="0.6 0.6 0.6">
+			position="4 1.5 -4.9" scale="0.9 0.9 1" text="align: center" font="mozillavr">
+				<a-box color="black" material="opacity: 0.8" position="0 -0.13 -0.01" scale="1.6 1.14 0.01" transparent="true">
+					<a-box scale="1.1 1.1 0.01" material="opacity: 0.8" color="grey"></a-box>
+				</a-box>
+				<a-entity id="arrow_keys" position="0 1 0" scale="0.5 0.5 0.5">
 					<a-image src="Keyboard_Black_Arrow_Down.png" position="0 0 0" ></a-image>
 					<a-image src="Keyboard_Black_Arrow_Up.png" position="0 1 0" ></a-image>
 					<a-image src="Keyboard_Black_Arrow_Left.png" position="-1 0 0" ></a-image>
